升级使用最新版本

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,12 @@ wx.mp.secret=@secret
 wx.mp.token=@token
 wx.mp.aesKey=@aesKey
 # ¥Ê¥¢≈‰÷√redis(ø…—°)
-wx.mp.config-storage.type=redistemplate
+wx.mp.config-storage.type=RedisTemplate
 wx.mp.config-storage.key-prefix=wx
 wx.mp.config-storage.redis.host=127.0.0.1
 wx.mp.config-storage.redis.port=6379
 # httpøÕªß∂À≈‰÷√
-wx.mp.config-storage.http-client-type=httpclient
+wx.mp.config-storage.http-client-type=HttpClient
 wx.mp.config-storage.http-proxy-host=
 wx.mp.config-storage.http-proxy-port=
 wx.mp.config-storage.http-proxy-username=
