--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>com.github.binarywang</groupId>
             <artifactId>wx-java-mp-spring-boot-starter</artifactId>
-            <version>3.9.1.B</version>
+            <version>4.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.github.jedis-lock</groupId>
