--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ script: "mvn clean package -DskipTests=true -Dcheckstyle.skip=true"
 branches:
   only:
     - develop
+    - master
 
 cache:
   directories:
